# stimsymb

./: .gitignore  GATES_TODO.md  README.md  pyproject.toml
src/stimsymb/: __init__.py  circuit.py  double_qubit.py  execution.py  gates.py  single_qubit.py  tableau.py
tests/: test_circuit.py  test_package.py  test_tableau.py
