[project]
name = "stimsymb"
version = "0.1.0"
description = "Symbolic execution engine for Stim"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "galois",
    "numpy",
    "sympy",
    "stim",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
